<resources>
    <string name="app_name">DurianCam</string>
    <string name="action_settings">Settings</string>
    <string name="easy_login">Quick Sign in</string>
    <string name="keep_screen_on_off">Keep Screen On</string>
    <string name="push_notification_enable">Motion Detected Push</string>
    <string name="please_choose_mode">Please choose mode</string>
    <string name="selete_viewer_mode">Viewer Mode</string>
    <string name="selete_camera_mode">Camera Mode</string>
    <string name="btn_start">Start</string>
    <string name="please_wait">Please wait for a while</string>
    <string name="fail_login">Login fail. Please retry.</string>
    <string name="wait_for_view">If you connect the viewer from the other smartphones are connected to each other.</string>
    <string name="wait_for_connection">Wait for a connection</string>
    <string name="backbutton_click_is_finish">Press again to exit DurianCam</string>
    <string name="app_version">App Ver.</string>
    <string name="web_client_id">175455013954-b689lntjl9mmqmmln0qegdu7q7cetqja.apps.googleusercontent.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-2529356179267288/7695106253</string>
    <string name="save_image_into_gallery">Save in your photo album</string>
    <string name="motion_detecte_sensitivity">Motion sensitivity settings</string>
    <string name="video_recording">Video recording</string>
    <string name="video_recording_option">Video recording</string>
    <string name="motion_detect_mode_on_off">Motion detect mode</string>
    <string name="category_pet_talk">Pet talk</string>
    <string name="category_cctv">CCTV</string>
    <string name="category_motion_detect">Motion Detection</string>
    <string name="secure_mode_text">Motion Detecting</string>
    <string name="ready_to_detect_mode">Ready to motion detect.</string>
    <string name="detect_notice">Notice</string>
    <string name="detect_detail_notice">Motion has been detected.</string>
    <string name="dispay_wall_on_off">Hiding camera display</string>
    <string name="show_detected_image">Motion detected Data</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_all_delete">Delete All</string>
    <string name="confirm">OK</string>
    <string name="cancel">cancel</string>
    <string name="really_want_to_delete">Do you really want to delete?</string>
    <string name="you_need_to_check_available_memory">You need to check available memory.</string>
    <string name="please_check_network_state">Please check your network state.</string>
    <string name="not_supported_right_now">Coming soon</string>
    <string name="you_have_to_google_login_first">You need a Google sign in once .</string>
</resources>
