<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="2">


        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_selector"
            android:text="@string/selete_camera_mode"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_viewer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_selector"
            android:text="@string/selete_viewer_mode"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/btn_selector"
            android:text="@string/btn_start"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
